# neutral-density

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  ruff.yml
neutral-density/tests/: test_import.py
notebooks/: 01_load_data_create_grid.ipynb  02_compute_neutral_slope_at_every_depth.ipynb  03_interpolate_and_compare_angles.ipynb  04_cost_function.ipynb  jaxathon_neutral_density_project_achievement.ipynb
