[tool.poetry]
name = "neutral-density"
version = "0.1.0"
description = ""
authors = ["Romain Caneill <romain.caneill@univ-grenoble-alpes.fr>", "Julien Le Sommer <julien.lesommer@univ-grenoble-alpes.fr>"]
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }


[tool.poetry.dependencies]
python = "^3.10"
jax = {extras = ["cuda12"], version = "^0.5.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
