[tool.poetry]
name = "neutral-density"
version = "0.1.0"
description = ""
authors = ["Romain Caneill <romain.caneill@univ-grenoble-alpes.fr>", "Julien Le Sommer <julien.lesommer@univ-grenoble-alpes.fr>"]
readme = "README.md"
license = "LGPL-3.0-or-later"


[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.3.5"
pytest = "^8.3.5"
xarray = "^2025.1.2"
gsw = "^3.6.19"
gsw-xarray = "^0.4.0"
netcdf4 = "^1.7.2"
matplotlib = "^3.10.1"
numpy = "^2.2.3"
jax = "^0.5.2"

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
jax = {extras = ["cuda"], version = "^0.5.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
