[tool.poetry]
name = "neutral-density"
version = "0.1.0"
description = ""
authors = ["Romain Caneill <romain.caneill@univ-grenoble-alpes.fr>", "Julien Le Sommer <julien.lesommer@univ-grenoble-alpes.fr>"]
readme = "README.md"
license = "LGPL-3.0-or-later"


[tool.poetry.dependencies]
python = "^3.10"
jax = {version = ">=0.3.2,<=0.5.0", extras = ["cuda12"]}
jupyterlab = "^4.3.5"
pytest = "^8.3.5"
xarray = "^2025.1.2"
gsw = "^3.6.19"
gsw-xarray = "^0.4.0"
netcdf4 = "^1.7.2"
matplotlib = "^3.10.1"
numpy = ">=1.24,<2.2"
cf-xarray = "0.7.9"
xgcm = "^0.8.1"
cftime = "^1.6.4.post1"
llvmlite = "^0.44.0"
numba = "^0.61.0"
neutralocean = "^2.1.3"
interpax = "^0.3.6"
optax = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
